# mcp-server-decisions

./: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  server.json  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  EXAMPLES.md  INTEGRATIONS.md  OUTCOME-GATE-PATTERN.md
scripts/: technology_performance_report.py
