[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-decisions"
version = "1.0.2"
description = "MCP server for architectural decision tracking with prediction validation and outcome gates"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Roberton003"}]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/Roberton003/mcp-server-decisions"

[project.scripts]
mcp-server-decisions = "server:main"

[tool.hatch.build.targets.wheel]
include = [
  "/server.py",
  "/scripts",
  "/README.md",
  "/LICENSE",
  "/docs"
]
